some clean ups