@@ -9,8 +9,6 @@ import org.springframework.util.StringUtils;
 import javax.transaction.Transactional;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Service
 @RequiredArgsConstructor
 public class FindAllRecipesOfUserUseCase {
@@ -20,6 +18,6 @@ public class FindAllRecipesOfUserUseCase {
         return user.getRecipes().stream()
                 .map(RecipeDto::from)
                 .filter(recipeDto -> !StringUtils.hasText(category) || (StringUtils.hasText(category) && recipeDto.getCategories().contains(category)))
-                .collect(toList());
+                .toList();
     }
 }
